--- a/speakStyle.css
+++ b/speakStyle.css
@@ -1,15 +1,15 @@
 html, body {
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 header {
     width: 100vw;
     height: 100px;
-    background-color: #00594F;
+    background: linear-gradient(180deg, #00594F, #ffffff);
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    
 }
 #logo-image {
     width: 100px;
@@ -23,6 +23,7 @@ header {
     height: 100px;
     display: flex;
     justify-content: center;
+    z-index: 2;
 }
 #menu {
     width: 80vw;
@@ -131,4 +132,93 @@ header {
 .menu-btn:hover {
     color: #ffffff;
 
+}
+.row-1 {
+    width: 100vw;
+    height: 800px;
+    background-image: url("https://censolutions.com/wp-content/uploads/2018/08/765297-business-wallpapers-1920x1080-smartphone.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+#intro-content {
+    width: 100vw;
+    height: inherit;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+}
+#caption {
+    font-family: Asset;
+    font-size: 30px;
+    width: 40%;
+    color: #ffff;
+}
+#intro-interact {
+    width: 40%;
+}
+#motivation {
+    width: 500px;
+    height: auto;
+}
+#text {
+    font-family: Allan;
+    font-size: 22px;
+}
+.mot-text {
+    font-family: Adamina;
+    font-size: 16px;
+    color: #ffffff;
+    padding-left: 5px;
+}
+.mot-header {
+    width: 550px;
+    height: 50px;
+    background-color: #00594F;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+.plus {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    
+    cursor: pointer;
+}
+.row-v {
+    width: 20px;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    transform: rotate(90deg);
+}
+.row-h {
+    width: 20px;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+.hrf {
+    text-decoration: none;
+    color: #CD7F32;
+    
+}
+.motivation-content {
+    font-family: Adamina;
+    font-size: 12px;
+    width: inherit;
+    
 }
