--- a/speakStyle.css
+++ b/speakStyle.css
@@ -10,6 +10,8 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
+    overflow-y: hidden;
+    z-index: 4;
 }
 #logo-image {
     width: 100px;
@@ -17,13 +19,14 @@ header {
     border-radius: 50%;
     margin-top: 50px;
     cursor: pointer;
+   
 }
 #logo {
     width: 20vw;
     height: 100px;
     display: flex;
     justify-content: center;
-    z-index: 2;
+    z-index: 5;
 }
 #menu {
     width: 80vw;
@@ -32,8 +35,6 @@ header {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    
-    
 }
 .lessons-container {
     display: flex;
@@ -41,7 +42,6 @@ header {
     width: 200px;
     height: 100px;
     z-index: 3;
-    
 }
 #part-top {
     display: flex;
@@ -49,8 +49,6 @@ header {
     width: 100%;
     height: 99px;
     cursor: pointer;
- 
-    
 }
 #word {
     font-family: Audiowide;
@@ -60,7 +58,6 @@ header {
     text-align: center;
     line-height: 4.8;
     transition: 0.2s ease-in;
-   
     outline: 0;
 }
 
@@ -72,7 +69,6 @@ header {
     height: 1px;
     overflow-x: hidden;
     z-index: 4;
-    
 }
 .lessons-content {
     width: 100%;
@@ -82,7 +78,6 @@ header {
     margin-top: -210px;
     transition: 0.2s ease-in;
     z-index: 2;
-    
 }
 .list-lessons {
     display: block;
@@ -94,10 +89,9 @@ header {
     height: 30px;
     color: #000000; 
     z-index: 1;  
-
 }
 .list-lessons:hover {
-    border: 1px solid #ffffff;
+    border-left: 5px solid #fff;
 }
 .list-lessons:hover {
     color: #ffffff;
@@ -116,8 +110,7 @@ header {
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     margin-top: 50px;
-    transition: 0.2s ease-in;
-    
+    transition: 0.2s ease-in;  
 }
 .arrowRot {
     transform: rotate(180deg);
@@ -139,6 +132,7 @@ header {
     background-image: url("https://censolutions.com/wp-content/uploads/2018/08/765297-business-wallpapers-1920x1080-smartphone.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-y: hidden;
     
 }
 #intro-content {
@@ -148,7 +142,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-
+    
 }
 #caption {
     font-family: Asset;
@@ -180,12 +174,14 @@ header {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    margin-bottom: 5px;
+    z-index: 1;
 }
 .plus {
     width: 50px;
     height: 50px;
     position: relative;
-    
+    z-index: 2;
     cursor: pointer;
 }
 .row-v {
@@ -199,6 +195,7 @@ header {
     left: 0;
     margin: auto;
     transform: rotate(90deg);
+    z-index: 1;
 }
 .row-h {
     width: 20px;
@@ -210,15 +207,107 @@ header {
     right: 0;
     left: 0;
     margin: auto;
+    z-index: 1;
 }
 .hrf {
     text-decoration: none;
     color: #CD7F32;
-    
 }
 .motivation-content {
     font-family: Adamina;
     font-size: 12px;
     width: inherit;
+    display: none;
+}
+.open {
+    display: block;
+}
+.round {
+    transform: rotate(45deg);
+}
+.shadow {
+    width: 100vw;
+    height: 10px;
+    box-shadow: 0px 10px 10px 20px #ffffff;
+}
+#clickable {
+    width: 100px;
+    height: 40px;
+    background-color: #00594F;
+    border: 1px solid #ffffff;
+    border-radius: 10px;
+    position: relative;
+    cursor: pointer;
+    display: none;
+
+}
+.click {
+    width: 50px;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    padding: 5px;
     
+}
+.frat {
+    border-bottom: 4px dashed #00594F;
+}
+.mobileMenu {
+    width: 100vw;
+    background-color:#00594F ;
+    height: 50vh;
+    z-index: 10;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: -50vh;
+    transition: 1s ease-out;
+}
+.clicker {
+    margin-bottom: 0;
+}
+
+
+@media screen and  (max-width: 420px) {
+    #caption {
+        width: 100vw;
+        padding: 10px;
+    }
+    #intro-interact {
+        width: 100vw;
+    }
+    .mot-header {
+        width: 100vw;
+    }
+    .mot-text {
+        line-height: 1;
+        font-family: 14px;
+        font-family: sans-serif;
+    }
+    .motivation-content {
+        width: 100vw;
+        padding-left: 5px;
+    }
+    #logo {
+        display: none;
+    }
+    .lessons-container {
+        display: none;
+    }
+    .menu-btn {
+        display: none;
+    }
+    #clickable {
+        display: flex;
+    }
+    #menu {
+        justify-content: center;
+    }
+    header {
+        justify-content: center;
+    }
 }
