--- a/speakStyle.css
+++ b/speakStyle.css
@@ -10,8 +10,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    overflow-y: hidden;
-    z-index: 4;
+    z-index: 6;
 }
 #logo-image {
     width: 100px;
@@ -19,7 +18,6 @@ header {
     border-radius: 50%;
     margin-top: 50px;
     cursor: pointer;
-   
 }
 #logo {
     width: 20vw;
@@ -116,8 +114,9 @@ header {
     transform: rotate(180deg);
 }
 .menu-btn {
-    font-family: Audiowide;
+    font-family: Alegreya Sans;
     font-size: 22px;
+    font-weight: 900;
     width: 100px;
     cursor: pointer;
     transition: 0.2s ease-in;
@@ -133,6 +132,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     overflow-y: hidden;
+    z-index: 1;
     
 }
 #intro-content {
@@ -162,7 +162,7 @@ header {
     font-size: 22px;
 }
 .mot-text {
-    font-family: Adamina;
+    font-family: Alegreya Sans;
     font-size: 16px;
     color: #ffffff;
     padding-left: 5px;
@@ -183,6 +183,7 @@ header {
     position: relative;
     z-index: 2;
     cursor: pointer;
+    transition: 0.3s ease-in-out;
 }
 .row-v {
     width: 20px;
@@ -218,6 +219,7 @@ header {
     font-size: 12px;
     width: inherit;
     display: none;
+    transition: 0.3 ease-in-out;
 }
 .open {
     display: block;
@@ -230,16 +232,9 @@ header {
     height: 10px;
     box-shadow: 0px 10px 10px 20px #ffffff;
 }
-#clickable {
-    width: 100px;
-    height: 40px;
-    background-color: #00594F;
-    border: 1px solid #ffffff;
-    border-radius: 10px;
-    position: relative;
-    cursor: pointer;
-    display: none;
 
+#clickable {
+    display: none;
 }
 .click {
     width: 50px;
@@ -269,6 +264,62 @@ header {
 }
 .clicker {
     margin-bottom: 0;
+}
+.icons-setup {
+    height: 80px;
+    width: 80px;
+    border-radius: 25px;
+    place-self: center;
+}
+.icon {
+    cursor: pointer;
+}
+.txt {
+    font-family: Alegreya Sans;
+    color: #ffffff;
+    font-size: 20px;
+    text-align: center;
+}
+#gridTable {
+    align-content: center;
+    justify-content: center;
+    width: inherit;
+    height: inherit;
+    display: -moz-inline-grid;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    grid-template-columns: 80px 30px 80px;
+    grid-template-rows: 80px 30px 30px 80px 30px;
+    grid-template-areas: 
+    "icon1 . icon2"
+    "txt1 . txt2"
+    ". . ."
+    "icon3 . icon4"
+    "txt3 . txt4";
+}
+.icon-1 {
+    grid-area: icon1;
+}
+.icon-2 {
+    grid-area: icon2;
+}
+.icon-3 {
+    grid-area: icon3;
+}
+.icon-4 {
+    grid-area: icon4;
+}
+.txt-1 {
+    grid-area: txt1;
+}
+.txt-2 {
+    grid-area: txt2;
+}
+.txt-3 {
+    grid-area: txt3;
+}
+.txt-4 {
+    grid-area: txt4;
 }
 
 
