--- a/speakStyle.css
+++ b/speakStyle.css
@@ -369,6 +369,7 @@ header {
 .row-3 {
     width: 100vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 .left-side {
@@ -446,7 +447,7 @@ header {
 .arrow-box {
     width: 15px;
     height: 15px;
-    background-color: #00594F;;
+    background-color: #00594F;
     border-top: 3px solid #ffffff;
     border-left: 3px solid #ffffff;
     position: absolute;
@@ -483,8 +484,51 @@ header {
 
 #video {
     z-index: 1;
+    width: inherit;
 }
 
+#mobileCourse {
+    width: 100vw;
+    height: 300px;
+    background-color: red;
+    display: none;
+}
+.openCourse {
+    width: inherit;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    background-color: #00594F;
+    z-index: 1;
+}
+.courseLevel {
+    width: 80%;
+    height: inherit;
+    color: #ffffff;
+    font-family: Alegreya Sans;
+    line-height: 1.5;
+    font-size: 20px;
+    padding-left: 5px;
+}
+.arrow-open {
+    position: relative;
+    width: 20%;
+    height: inherit;
+    background-color: green;
+}
+.box-arrow {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-left: 4px solid #ffffff;
+    border-top: 4px solid #ffffff;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+    transform: rotate(220deg);
+}
 @media screen and  (max-width: 420px) {
     #caption {
         width: 100vw;
@@ -523,4 +567,27 @@ header {
     header {
         justify-content: center;
     }
+    #user-offers {
+        display: none;
+    }
+    .nav-bar-english-header {
+        display: none;
+    }
+    .gallery {
+        display: none;
+    }
+    .left-side {
+        width: 100vw;
+    }
+    .right-side {
+        width: 100vw;
+    }
+    .shadow {
+        display: none;
+    }
+    #mobileCourse {
+        display: block;
+        margin-top: 0px;
+    }
+    
 }
