--- a/speakStyle.css
+++ b/speakStyle.css
@@ -514,6 +514,7 @@ header {
     width: 20%;
     height: inherit;
     cursor: pointer;
+    transition: 0.5s ease-in-out;
 }
 .box-arrow {
     position: absolute;
@@ -542,12 +543,32 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
     display: none;
-    
+    justify-content: space-around;
+    transition: 0.5s all ease-out;
 }
 .blocker {
     display: block;
+}
+.contentView {
+    display: flex;
+}
+
+.courseContent {
+    width: 40%;
+    height: 70px;
+    background-color: #00594F;
+    border-radius: 20px;
+    opacity: 0.5;
+    color: #ffffff;
+    text-align: center;
+    line-height: 2;
+    margin-bottom: 3px;
+    transition: 0.5s ease-in-out;
+    font-family: Alegreya Sans;
+}
+.courseContent:hover {
+    opacity: 1;
 }
 @media screen and  (max-width: 420px) {
     #caption {
