--- a/speakStyle.css
+++ b/speakStyle.css
@@ -430,6 +430,47 @@ header {
     flex-direction: row;
     overflow: hidden;
 }
+.cino {
+    width: 500px;
+    height: 250px;
+    grid-area: scr;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+.screen3 {
+    width: 500px;
+    height: 250px;
+    grid-area: scr;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+  
+
+}
+.screen4 {
+    width: 500px;
+    height: 250px;
+    grid-area: scr;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+   
+}
+.screen5 {
+    width: 500px;
+    height: 250px;
+    grid-area: scr;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    
+}
+
 .item-arrow-left {
     grid-area: arrowleft;
     background-color: #00594F;
@@ -549,6 +590,9 @@ header {
 }
 .blocker {
     display: block;
+}
+.coker {
+    display: none;
 }
 .contentView {
     display: flex;
